--- a/MLFactorGraph/MLFactorGraph/MLFactorGraph.csproj
+++ b/MLFactorGraph/MLFactorGraph/MLFactorGraph.csproj
@@ -50,6 +50,12 @@
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ResearchUtils\ResearchUtils.csproj">
+      <Project>{e6ebbb54-9821-4344-9a72-1f3d6db8eda0}</Project>
+      <Name>ResearchUtils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
